# libvita2d

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml
libvita2d/: CMakeLists.txt  Makefile
libvita2d/include/: bin_packing_2d.h  int_htab.h  shared.h  texture_atlas.h  utils.h  vita2d.h
libvita2d/shader/: clear_f.cg  clear_v.cg  lcd3x.fcg  lcd3x.vcg
libvita2d/source/: bin_packing_2d.c  int_htab.c  texture_atlas.c  utils.c  vita2d.c  vita2d_dialog.c  vita2d_draw.c  vita2d_font.c  vita2d_image_bmp.c  vita2d_image_jpeg.c  vita2d_image_png.c  vita2d_pgf.c  vita2d_pvf.c  vita2d_texture.c
sample/: CMakeLists.txt  Makefile  Makefile.sysapp  main.c
